# mmdetection3d-eloss-neuralps

./: .gitignore  README.md  download.py  kitti_download.py  kitti_extract.py  kitti_process.py  main.py  nuscenes_download.py  nuscenes_extract.py  nuscenes_process.py  pyproject.toml
configs/xnet/: pointpillars_hv_fpn_sbn-all_8xb4-1x_nus-3d.py  pointpillars_hv_secfpn_8xb6-10e_kitti-3d-3class.py  second_hv_secfpn_8xb6-10e_kitti-3d-3class.py
configs/xnet/.archive/new/: xnet_base_1re-kitti_3d_3class-cyclic_60e.py  xnet_exp00_1-kitti_3d_3class-cyclic_20e.py  xnet_exp00_1re-kitti_3d_3class-cyclic_60e.py  xnet_multi-SECOND-3class.py
configs/xnet/datasets/: kitti-3d-3class-noise.py  nus-3d-noise.py
configs/xnet/models/: pointpillars_hv_fpn_nus.py  pointpillars_hv_fpn_nus_eloss.py  pointpillars_hv_secfpn_kitti.py  pointpillars_hv_secfpn_kitti_eloss.py  second_hv_secfpn_kitti.py  second_hv_secfpn_kitti_eloss.py
configs/xnet/schedules/: cyclic-10e.py  schedule-1x.py
mmdet3d/datasets/transforms/: __init__.py  abnormal.py
mmdet3d/models/detectors/: mvx_two_stage.py  single_stage.py  x_net.py
mmdet3d/models/losses/: __init__.py
requirements/: optional.txt
scripts/: build_env.sh  exp00_base.sh  inference.py  inference.sh
tools/: logging_setup.py  utils.py
