[project]
name = "workspace"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "numpy==1.26.4",
    "torch==2.1.2",
    "torchvision==0.16.2",
    "torchaudio==2.1.2",
    "mmcv==2.1.0",
    "mmengine==0.7.2",
    "mmdet==3.0.0",
    "pip>=25.1.1",
    "setuptools>=80.9.0",
]
