[project]
name = "workspace"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "numpy==1.26.4",
    "torch==2.1.2",
    "torchvision==0.16.2",
    "torchaudio==2.1.2",
    "mmengine==0.8.0",
    "mmdet==3.2.0",
    "pip>=25.1.1",
    "setuptools>=80.9.0",
    "jupyter>=1.1.1",
    "nuscenes-devkit>=1.1.11",
]
