[project]
name = "workspace"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "numpy==1.26.4",
    "torch==2.1.2",
    "torchvision==0.16.2",
    "torchaudio==2.1.2",
    "mmengine==0.8.0",
    "mmdet==3.2.0",
    "pip>=25.1.1",
    "setuptools>=80.9.0",
    "jupyter>=1.1.1",
    "nuscenes-devkit>=1.1.11",
    "numba>=0.61.2",
    "scikit-image>=0.25.2",
    "black==20.8b1",
    "typing-extensions>=4.14.1",
    "lyft-dataset-sdk>=0.0.8",
    "networkx>=2.5",
    "open3d>=0.19.0",
    "plyfile>=1.1.2",
    "tensorboard>=2.20.0",
    "trimesh>=4.7.1",
    "codecov>=2.1.13",
    "flake8>=7.3.0",
    "interrogate>=1.7.0",
    "isort>=6.0.1",
    "kwarray>=0.7.0",
    "parameterized>=0.9.0",
    "pytest>=8.4.1",
    "pytest-cov>=6.2.1",
    "pytest-runner>=6.0.1",
    "ubelt>=1.3.7",
    "xdoctest>=0.10.0",
    "yapf>=0.43.0",
]
